tests/resource/valid/collection/infer_collection_type.mamba
def x := [0, 2, 51]

def y := x[0]
