tests/resource/invalid/type/collection/list_builder_with_undefined_var.mamba
def h := [2, 3]
[ x | x in h, y > 0 ]
